# ternary-visualizer

./: AGENT.md  Cargo.toml  PLUG_AND_PLAY.md  README.md
memory/: JOURNAL.md
src/: cascade_timeline.rs  conservation_gauge.rs  fitness_chart.rs  lib.rs  population_heatmap.rs  species_bar.rs  strategy_grid.rs  summary_card.rs
